--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,14 @@ jobs:
           cache: "npm"
       - run: npm i
       - run: npm run build
+
   deploy:
     needs: test-build
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-verson: [16.x]
+        node-version: [16.x]
 
     steps:
       - name: Build app on VM
