--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: Test, Build, and Deploy | Modul 01 - Lab2.2 Senior Project
 on:
   push:
     branches: [main]
+
 jobs:
   test-build:
     runs-on: ubuntu-latest
@@ -20,7 +21,7 @@ jobs:
           cache: "npm"
       - run: npm i
       - run: npm run build
-
+    
   deploy:
     needs: test-build
     runs-on: ubuntu-latest
@@ -35,10 +36,10 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSSWORD }}
+          password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            eval "${ssh-agent -s}"
+            eval "$(ssh-agent -s)"
             ssh-add ~/.ssh/senpro-ssh
             cd ~/senpro/460557/modul01/senpro-github-action
             git restore .
